--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,10 @@
       crossorigin="anonymous"
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
     />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/ngx-bootstrap/datepicker/bs-datepicker.css"
+    />
   </head>
   <body>
     <app-root></app-root>
